deleted local fontawesome files and updated icon size

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>·Home·</title>
     <link rel="stylesheet" href="styles/pages.css" />
     <link rel="stylesheet" href="styles/todo.css" />
-    <link rel="stylesheet" href="assets/fontawesome/all.css" />
-
+    <!-- <link rel="stylesheet" href="assets/fontawesome/all.css" /> -->
+    <script
+      src="https://kit.fontawesome.com/a45b298328.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
