--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <h3>Code</h3>
               <ul>
                 <li>
-                  <a href="https://github.com/Sraiko">
+                  <a href="https://github.com/VoidNoi">
                     <i class="fa-brands fa-github"></i> Github</a
                   >
                 </li>
